# llm-council

./: AGENTS.md  Dockerfile  README.md  check_syntax.py  codex_setup.sh  debug_db.py  docker-compose.yml  frontend_log.txt  jules_setup.sh  pyproject.toml  pytest.ini  render.yaml  render_build.sh  test_fallback.py  verify_delete.py  verify_fix.py  verify_multiturn.py
.Jules/: palette.md
.agent/: AGENTIC_WORKFLOW_README.md  kanban.md
.agent/passports/: 1_dark_mode.md  (+1 more)
.agent/roles/: 01_planner.md  02_architect.md  (+3 more)
.jules/: bolt.md  sentinel.md
Info/: AGENTIC_WORKFLOW.md  AGENTIC_WORKFLOW_DESIGN.md  IMPROVEMENTS_ROADMAP.md  OVERVIEW.md  README.md
backend/: auth.py  config.py  council.py  database.py  documents.py  export.py  main.py  openrouter.py  requirements.txt  retrieval.py  security.py  storage.py
frontend/: .env.example  eslint.config.js  frontend_log.txt  package-lock.json  package.json  tailwind.config.js
scripts/: add_index.py  benchmark_export.py  measure_retrieval.py  scout_agent.py
tests/: conftest.py  test_api.py  test_auth_allowlist.py  test_auth_security.py  test_bulk_insert.py  test_cors.py  test_cors_config.py  test_council.py  test_db_ssl.py  test_documents.py  test_error_handling_security.py  test_export.py  test_openrouter_client_reuse.py  test_openrouter_helpers.py  test_ranking_parser.py  test_rate_limiter_bypass.py  test_security_config.py  test_security_dos.py  test_security_headers.py  test_storage.py  test_validation.py  verify_live_api.py
verification/: test_sidebar.py  verify_chat.py  verify_sidebar.py  verify_tooltip.py
(+43 files in other folders)
